# boberai-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/amqp/: consumer.py  dependencies.py
app/api/: dependencies.py  routes.py  schemas.py
app/db/: conn.py  enums.py  init.py  models.py  repository.py
app/settings/: config.py
