[project]
name = "boberkurwa-test"
version = "0.1.0"
description = "BoberAI"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "faststream[rabbit]>=0.6.5",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
